@@ -524,8 +524,9 @@ class ClauseAttributesTest(ORMTest):
         assert u.counter == 1
         u.counter = User.counter + 1
         sess.flush()
+
         def go():
-            assert u.counter == 2
+            assert (u.counter == 2) is True  # ensure its not a ClauseElement
         self.assert_sql_count(testing.db, go, 1)
 
     def test_multi_update(self):
@@ -542,7 +543,7 @@ class ClauseAttributesTest(ORMTest):
         sess.flush()
         def go():
             assert u.name == 'test2'
-            assert u.counter == 2
+            assert (u.counter == 2) is True
         self.assert_sql_count(testing.db, go, 1)
 
         sess.clear()
@@ -559,7 +560,7 @@ class ClauseAttributesTest(ORMTest):
         sess = Session()
         sess.save(u)
         sess.flush()
-        assert u.counter == 5
+        assert (u.counter == 5) is True
 
 
 class PassiveDeletesTest(ORMTest):
